terraform/route.tf
resource "aws_route_table" "rt-gw" {
    vpc_id = aws_vpc.vpc1.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.gw.id
    }
    tags = {
        Name = "public-rt"
    }
}

resource "aws_route_table_association" "rt-subnet" {
    subnet_id = aws_subnet.subnet01.id
    route_table_id = aws_route_table.rt-gw.id
}
